--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@tailwindcss/vite": "^4.1.6",
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
+    "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "flowbite": "^3.1.2",
     "formik": "^2.4.6",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
